tests/NormalTests/paczka1/small_fuzzy/56995593.err
Error in line 12: 4wcxAT S954 19,53
Error in line 11: IZWs8gFJR7i A94 99,7
